--- a/portfolio.html
+++ b/portfolio.html
@@ -202,6 +202,16 @@
             </a></li>
         </ul>
       </div>
+      <div class="footer-form">
+        <h2 class="footer-form-tytle">Subscribe</h2>
+        <form class="form-email">
+          <input class="form-input" type="text" name="user-email" placeholder="E-mail" required>
+          <button class="form-button" type="submit">Subscribe
+            <svg class="form-icons-frame" width="24px" height="24px">
+              <use href="./images/icons.svg#icon-frame"></use>
+            </svg></button>
+        </form>
+      </div>
     </div>
   </footer>
 
